# TheBeginning

./: Readme.md  Reame.md
Cpp/Notes/src/: main.cpp  (+1 more)
Cpp/Vigenere/: vigenere.c
Cpp/apis/api1/: CMakeLists.txt  consts.hpp  main.cpp  utils.hpp
Cpp/apis/api1/model/: MovieSearcher.cpp  MovieSearcher.hpp
Cpp/apis/api1/view/: MainView.cpp  MainView.hpp
Cpp/tvpo3/code/: CMakeLists.txt
Cpp/tvpo3/code/include/: coder.hpp  decoder.hpp  shared.hpp  util.hpp
Cpp/tvpo3/code/src/: coder.cpp  decoder.cpp  main.cpp  shared.cpp  tests.cpp  util.cpp
Cpp/tvpo7/: CMakeLists.txt  main.c  stateMachine.c  stateMachine.h
Java/: JavaTheadSync.java  JavaTheadSync2.java  javaThreadSync3.java
Java/NotesFxml/: readme.txt
Java/NotesMvn/: pom.xml
Java/virt3/: Dockerfile  docker-compose.yml  pom.xml
programmingHomeworks/: HW1J3.java  HW2.java  HW3.c  HW5.java  HW6.java  HW7.java  Homework2.c  Homework4.c  NoughtsAndCrosses.java
programmingHomeworks/HW3A3/: build.gradle
programmingHomeworks/HomeWork3j/: Main.java
programmingHomeworks/Homework1-a2/: AndroidManifest.xml  build.gradle
programmingHomeworks/Homework2-a2/: AndroidManifest.xml  build.gradle
programmingHomeworks/Homework2J2/: readme.txt
programmingHomeworks/Homework2J3/: HW2J3.java  IConstantsJDBC.java
programmingHomeworks/Homework2a3/: AndroidManifest.xml  MainActivity.kt  build.gradle
programmingHomeworks/Homework3-a2/: AndroidManifest.xml
programmingHomeworks/Homework3J2/: HW3J2.java  New  New2
programmingHomeworks/Homework3a/: AndroidManifest.xml
programmingHomeworks/Homework4-a2/: build.gradle
(+374 files in other folders)
